# Version 0.2.1

* Dependency bumps.


# Version 0.2.0

* Significantly upgraded the API and renamed functions to play well with
  pipes-4.0, pipes-safe-2.0, pipes-network-0.6 and
  network-simple-tls-0.2.

* Throw `IOError` in `IO` in order to report timeout errors. Delete
  the `Timeout` data-type.


# Version 0.1.1.0

* Re-export `Network.Socket.withSocketsDo`


# Version 0.1.0.0

* First release.