@@ -1,3 +1,8 @@
+# Version HEAD
+
+* Remove `Pipes.Safe.Base m ~ IO` constraints.
+
+
 # Version 0.2.1
 
 * Dependency bumps.
